# SkylarkLabs-Inference-Clients

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
production_clients/: batch_similarity.py  change_detection.py  dali_cv2_imdecoder.py  dali_decoder.py  face_detection.py  face_recognition.py  long_range_pedestrian_detection.py  object_detection_post.py  pedestrian_detection.py
skylarklabs_inference_client/production_clients/: __init__.py  batch_similarity.py  change_detection.py  crowd_detection.py  face_detection.py  face_orientation_detection.py  face_recognition.py  facial_landmarks.py  feature_based_tracking.py  gathering_detection.py  long_range_pedestrian_detection.py  pedestrian_detection.py  vehicle_detection.py
skylarklabs_inference_client/standard_clients/: base_client.py  base_image_client.py  object_detection.py
skylarklabs_inference_client/utils/: __init__.py  bounding_box.py  image.py  statistics.py  video.py
src/clients/: Ubuntu-B.ttfZone.Identifier  __init__.py  base_client.py  base_image_client.py  object_detection.py  object_detection_post.py  object_detection_pre.py  utils.py
src/triton_inference_clients/: __init__.py
src/triton_inference_clients/production_clients/: __init__.py  batch_similarity.py  change_detection.py  dali_decoder.py  face_detection.py  face_recognition.py  head_detection.py  head_recognition.py  long_range_pedestrian_detection.py  pedestrian_detection.py  truck_recognition.py
src/triton_inference_clients/standard_clients/: __init__.py  base_client.py  base_image_client.py  object_detection.py
src/triton_inference_clients/utils/: __init__.py  bounding_box.py  image.py  statistics.py  video.py
tests/clients/: test_batch_similarity.py  test_change_detection.py  test_dali_decoder.py  test_face_detection.py  test_face_recognition.py  test_head_detection.py  test_head_recognition.py  test_long_range_pedestrian_detection.py  test_pedestrian_detection.py
tests/utils/: test_video.py
