[metadata]
name = clients
description = Clients library for SkylarkLabs.ai production
author = Rishik Mourya
author_email = rishik@skylarklabs.ai
version = 0.1.0
license = MIT
license_file = LICENCE
platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    clients
install_requires = 
    attrdict==2.0.1
    commonmark==0.9.1
    grpcio==1.41.0
    numpy==1.23.0
    opencv-python==4.6.0.66
    protobuf==3.19.4
    Pygments==2.12.0
    python-rapidjson==1.6
    rich==12.4.4
    six==1.16.0
    tritonclient==2.22.4


python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 180