[metadata]
name = triton_inference_clients
description = Triton Production clients library for SkylarkLabs.ai production
author = Rishik Mourya
author_email = rishik@skylarklabs.ai
version = 0.3
license = MIT
platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    triton_inference_clients
install_requires = 
    attrdict==2.0.1
    certifi==2022.6.15
    charset-normalizer==2.1.0
    commonmark==0.9.1
    grpcio==1.47.0
    idna==3.3
    numpy==1.23.1
    opencv-contrib-python==4.6.0.66
    Pillow==9.2.0
    protobuf==3.20.0
    Pygments==2.12.0
    python-rapidjson==1.8
    requests==2.28.1
    rich==12.5.1
    six==1.16.0
    tritonclient==2.23.0
    typing_extensions==4.3.0
    urllib3==1.26.10


python_requires = >=3.6
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.0
    pytest-cov>=3.0.0
    flake8>=4.0.1
    tox>=3.24

[flake8]
max-line-length = 160
ignore = E251,W293,E303,F541
